# thin_delegate

./: COPYRIGHT  Cargo.toml  README.md  justfile  releases.md
.github/workflows/: ci.yaml
src/: attr_remover.rs  decl_macro.rs  delegate_to_arg.rs  delegate_to_checker.rs  delegate_to_remover.rs  derive_delegate_args.rs  external_trait_def_args.rs  fill_delegate_args.rs  fn_call_replacer.rs  gen.rs  generic_param_replacer.rs  ident_replacer.rs  lib.rs  punctuated_parser.rs  self_replacer.rs  storage.rs  util.rs
tests/: test.rs
tests/ui/: _pass_generics_specialize_complex.rs  _pass_multiple_derive.rs  delegate_to_fail_delegate_to_can_appear_at_most_once.rs  delegate_to_pass_enum_delegate_to.rs  fail_derive_delegate_for_impl_without_trait.rs  fail_derive_delegate_for_impl_without_trait.stderr  fail_external_trait_def_no_with_uses.rs  fail_external_trait_def_no_with_uses.stderr  fail_external_trait_def_register_missing.stderr  fail_fields_of_enum_must_be_a_field.rs  fail_fields_of_enum_must_be_a_field.stderr  fail_fill_delegate_for_impl_without_trait.rs  fail_fill_delegate_for_impl_without_trait.stderr  fail_intended_limitation_associated_const_misning.rs  fail_intended_limitation_associated_const_misning.stderr  fail_intended_limitation_associated_type_missing.rs  fail_intended_limitation_associated_type_missing.stderr  fail_intended_limitation_fields_of_enum_must_be_a_field.rs  fail_intended_limitation_fields_of_enum_must_be_a_field.stderr  fail_limitation_non_trivial_receivers.rs  fail_limitation_non_trivial_receivers.stderr  fail_limitation_scheme_with_receivers.rs  (+72 more)
tests/ui.old/: delegate_to_fail_delegate_to_can_appear_at_most_once.rs  delegate_to_fail_delegate_to_can_appear_at_most_once.stderr  delegate_to_pass_real_world_example.rs  fail_num_of_generic_parameters_differ.stderr  fail_parameter_cant_substituted_to_argument.rs  fail_register_conflicted.stderr  fail_register_reject_path_with_generics.rs  pass_enum_ref_mut_receiver.rs  pass_external_trait.rs  pass_generics_specialize_complex.rs  pass_method_with_args.rs  pass_super_trait.rs
(+2 files in other folders)
